--- a/index.html
+++ b/index.html
@@ -12,28 +12,27 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
     </head>
     <body>
-        <div id="wrapper" class="wrapper">
-            <div class="content">
-                <form id="riddleForm">
-                    <h1>1. Wo<span style="color: white">r</span>t</h1>
-                    <p>Ich habe nur eine Farbe, aber nicht nur eine Grösse.</br>
-                       Festgemacht am <span style="color: rgb(3,168,108)">B</span>oden, dennoch fliege ich leicht.</br>
-                       Da bei Sonne, verschwunden bei Regen.</br>
-                       Tu niemandem weh, fühle selbst keinen Schmerz.</br>
-                       </br>
-                       Was bin ich?
-                    </p>
-                    <h1>2. Wort</h1>
-                    <p>Auf dieser Seite sind 4 Buchstaben versteckt.</br>
-                       Finde sie <span style="color: rgb(3,168,108)">u</span>nd setze sie in die richtige Reihenfol<span style="color: rgb(3,168,108)">g</span>e.
-                    </p>
-                    <input id="answerRiddle" class="textInput" type="text" placeholder="Antwort Rätsel"/> - <input id="answerLetters" class="textInput" type="text" placeholder="Versteckte Buchstaben"/>
+        <div class="content">
+            <form id="riddleForm">
+                <h1>1. Wo<span style="color: white">r</span>t</h1>
+                <p>Ich habe nur eine Farbe, aber nicht nur eine Grösse.</br>
+                    Festgemacht am <span style="color: rgb(3,168,108)">B</span>oden, dennoch fliege ich leicht.</br>
+                    Da bei Sonne, verschwunden bei Regen.</br>
+                    Tu niemandem weh, fühle selbst keinen Schmerz.</br>
                     </br>
-                    <div class="buttonHolder">
-                        <input class="button" type="button" value="OK" onclick="okClick()">
-                    </div>
-                </form>
-            </div>
+                    Was bin ich?
+                </p>
+                <h1>2. Wort</h1>
+                <p>Auf dieser Seite sind 4 Buchstaben versteckt.</br>
+                    Finde sie <span style="color: rgb(3,168,108)">u</span>nd setze sie in die richtige Reihenfol<span style="color: rgb(3,168,108)">g</span>e.
+                </p>
+                <input id="answerRiddle" class="textInput" type="text" placeholder="Antwort Rätsel"/>
+                <input id="answerLetters" class="textInput" type="text" placeholder="Versteckte Buchstaben"/>
+                </br>
+                <div class="buttonHolder">
+                    <input class="button" type="button" value="OK" onclick="okClick()">
+                </div>
+            </form>
         </div>
     </body>
 
